2001-03-12  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* arrays.scm (make-array): Added quote in front of ().

2001-03-12  Keisuke Nishida  <kxn30@po.cwru.edu>

	* common-list.scm (count-if): New procedure.

2001-03-10  Neil Jerram  <neil@ossau.uklinux.net>

	* buffered-input.scm (make-buffered-input-port): New, more general
	buffered input procedure.  Does not assume that a newline
	character should be interpolated between chunks of input returned
	by the reader proc.
	(make-line-buffered-input-port): Redefine in terms of
	make-buffered-input-port.

2001-03-09  Keisuke Nishida  <kxn30@po.cwru.edu>

	* match.scm: Don't export defstruct.  Use (unquote defstruct) instead.

2001-03-09  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* Makefile.am (psyntax.pp): Added rule for producing psyntax.pp.

2001-03-09  Keisuke Nishida  <kxn30@po.cwru.edu>

	* match.scm: export defstruct.

2001-03-08  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* psyntax.ss: Added FSF copyright notice.  Added a notice of
	changes in order to comply with paragraph 2a of the GPL.  (Thanks
	to Keith Wright.)

2001-03-07  Neil Jerram  <neil@ossau.uklinux.net>

	* buffered-input.scm (make-line-buffered-input-port): Don't set
	the continuation flag for leading whitespace.  Thanks to Dirk
	Herrmann for the suggestion.

2001-03-05  Neil Jerram  <neil@ossau.uklinux.net>

	* optargs.scm (rest-arg->keyword-binding-list): Use "'()" instead
	of "()".

	* buffered-input.scm: New file, with guts of line buffered input
	port implementation extracted from guile-readline/readline.scm.

2001-03-03  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* stack-catch.scm: New file.

	* Makefile.am (ice9_sources): Added stack-catch.scm.

2001-03-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm, rdelim.scm: Use "'()" instead of "()" in all places
	where the empty list is meant.

2001-02-26  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* boot-9.scm (save-stack): Use `primitive-eval' for stack